# HuffmanCompress

./: README.md  local.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/vincent/neteasehuffman/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/vincent/huffman/: App.java  MainActivity.java  TestImageLoader.java
app/src/main/java/com/vincent/huffman/bean/: UserViewInfo.java
app/src/main/java/com/vincent/huffman/utils/: CachePathUtils.java  CommonUtils.java  CompressConfig.java  Constants.java  ImagUtil.java  UriParseUtils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/vincent/neteasehuffman/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
